--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p><br>
 <a href="#" type="button" style="background:#009688b5; color: white; padding: 12px 30px;">See More</a>
 		
 	</div>
-	<div style="padding: 50px 30px;text-align: center;">
+	<div style="padding: 50px 30px;text-align: center; margin: auto;">
 		<h3 style="font-weight:normal;">Surreal Estate - Free HTML Email Template</h3>
 		<p style="font-size: 12px">East Pixel Bld. 99, Creative City 9000, Republic of Design</p>
 		<p style="font-size: 12px"><a href="#">Unsubscribe </a>from this mailing list.</p>
